Updates to index.html
Enhanced UI and updated links for linkedin, github, kaggle

--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
 			<h1 style="font-size: 80px;">Tarandeep Singh</h1>
 			<p class="lead">Hello, World!. I'm a C.S. Engineer with passion towards Machine Learning and Full Stack Development.</p>
 			<hr class="my-4" style="margin-bottom: 50px;">
-			<button type="button" class="btn btn-outline-light">Skills</button>
-			<button type="button" class="btn btn-outline-light">Projects</button>
+			<a href=""><button type="button" class="btn btn-outline-light">Skills</button></a>
+			<a href="#projects"><button type="button" class="btn btn-outline-light">Projects</button></a>
 			<button type="button" class="btn btn-outline-light">Experience</button>
 			<button type="button" class="btn btn-outline-light">Hobbies</button>
 
 			<p style="margin-top: 10px;">Let's connect</p>
-			<a class="btn btn-primary rounded" href="#" role="button"><i class="fab fa-github fa-2x"></i></a>
-			<a class="btn btn-primary rounded" href="#" role="button"><i class="fab fa-kaggle fa-2x"></i></a>
-			<a class="btn btn-primary rounded" href="#" role="button"><i class="fab fa-linkedin-in fa-2x"></i></a>
-			<a class="btn btn-primary rounded" href="#" role="button"><i class="far fa-envelope fa-2x"></i></i></a>
+			<a class="btn btn-primary rounded" href="https://github.com/Tarandeep97" role="button"><i class="fab fa-github fa-2x"></i></a>
+			<a class="btn btn-primary rounded" href="https://www.kaggle.com/tarandeep97" role="button"><i class="fab fa-kaggle fa-2x"></i></a>
+			<a class="btn btn-primary rounded" href="https://www.linkedin.com/in/tarandeep97/" role="button"><i class="fab fa-linkedin-in fa-2x"></i></a>
+			<a class="btn btn-primary rounded" href="mailto:tarandeeps1197@gmail.com" role="button"><i class="far fa-envelope fa-2x"></i></i></a>
 			
 			
 		</div>
@@ -46,6 +46,7 @@
 
 
 	<div class="container" style="margin-top:30px">
+		<a name="projects"></a>
 		<div class="row">
 			<div class="col-sm-6">
 				<div class="card text-white bg-success mb-6" style="margin-bottom: 10px;">
@@ -60,9 +61,20 @@
 			</div>
 			<div class="col-sm-6">
 				<div class="card text-white bg-success mb-6" style="margin-bottom: 10px;">
-					<div class="card-header">Smart Radiologist <span class="badge rounded-pill bg-light" style="float: right;margin-top: 2px;">Computer vision</span></div>
+					<div class="card-header">ACM Student Chapter Website<span class="badge rounded-pill bg-light" style="float: right;margin-top: 2px;">Full Stack Dev</span></div>
 					<div class="card-body">
-						<h4 class="card-title">AI based solution for automated radiology</h4>
+						<h4 class="card-title">ACM Student Chapter Website</h4>
+						<p class="card-text">The quick brown fox jumps over the lazy dog</p>
+						<a class="btn btn-light rounded-circle" href="#" role="button"><i class="fab fa-github"></i></a>
+						<a class="btn btn-light rounded-circle" href="https://bbsbec.acm.org/" role="button"><i class="fas fa-link"></i></i></a>
+					</div>
+				</div>
+			</div>
+			<div class="col-sm-6">
+				<div class="card text-white bg-success mb-6" style="margin-bottom: 10px;">
+					<div class="card-header">Pustak Bhandar<span class="badge rounded-pill bg-light" style="float: right;margin-top: 2px;">Full stack Dev</span></div>
+					<div class="card-body">
+						<h4 class="card-title">Online Book Store</h4>
 						<p class="card-text">The quick brown fox jumps over the lazy dog</p>
 						<a class="btn btn-light rounded-circle" href="#" role="button"><i class="fab fa-github"></i></a>
 						<a class="btn btn-light rounded-circle" href="#" role="button"><i class="fas fa-link"></i></i></a>
@@ -71,36 +83,15 @@
 			</div>
 			<div class="col-sm-6">
 				<div class="card text-white bg-success mb-6" style="margin-bottom: 10px;">
-					<div class="card-header">Smart Radiologist <span class="badge rounded-pill bg-light" style="float: right;margin-top: 2px;">Computer vision</span></div>
+					<div class="card-header">San Francisco Salary Insights<span class="badge rounded-pill bg-light" style="float: right;margin-top: 2px;">Data Science</span></div>
 					<div class="card-body">
-						<h4 class="card-title">AI based solution for automated radiology</h4>
+						<h4 class="card-title">Exploration of San Francisco Salaries Dataset</h4>
 						<p class="card-text">The quick brown fox jumps over the lazy dog</p>
 						<a class="btn btn-light rounded-circle" href="#" role="button"><i class="fab fa-github"></i></a>
-						<a class="btn btn-light rounded-circle" href="#" role="button"><i class="fas fa-link"></i></i></a>
+						<a class="btn btn-light rounded-circle" href="https://www.kaggle.com/tarandeep97/exploration-of-sf-salaries" role="button"><i class="fas fa-link"></i></i></a>
 					</div>
 				</div>
 			</div>
-			<div class="col-sm-6">
-				<div class="card text-white bg-success mb-6" style="margin-bottom: 10px;">
-					<div class="card-header">Smart Radiologist <span class="badge rounded-pill bg-light" style="float: right;margin-top: 2px;">Computer vision</span></div>
-					<div class="card-body">
-						<h4 class="card-title">AI based solution for automated radiology</h4>
-						<p class="card-text">The quick brown fox jumps over the lazy dog</p>
-						<a class="btn btn-light rounded-circle" href="#" role="button"><i class="fab fa-github"></i></a>
-						<a class="btn btn-light rounded-circle" href="#" role="button"><i class="fas fa-link"></i></i></a>
-					</div>
-				</div>
-			</div>
-			<div class="col-sm-6">
-				<div class="card text-white bg-success mb-6" style="margin-bottom: 10px;">
-					<div class="card-header">Smart Radiologist <span class="badge rounded-pill bg-light" style="float: right;margin-top: 2px;">Computer vision</span></div>
-					<div class="card-body">
-						<h4 class="card-title">AI based solution for automated radiology</h4>
-						<p class="card-text">The quick brown fox jumps over the lazy dog</p>
-						<a class="btn btn-light rounded-circle" href="#" role="button"><i class="fab fa-github"></i></a>
-						<a class="btn btn-light rounded-circle" href="#" role="button"><i class="fas fa-link"></i></i></a>
-					</div>
-				</div>
 			</div>
 		</div>
 	</div>
