--- a/index.html
+++ b/index.html
@@ -18,93 +18,102 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<link rel="stylesheet" type="text/css" href="assets/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<script src="https://kit.fontawesome.com/1f14724eeb.js" crossorigin="anonymous"></script>
+	<script type="text/javascript" href="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.3.2/chart.min.js"></script>
+	
 	<title>Tarandeep Singh - Portfolio</title>
 </head>
 <body>
 
-	<div class="jumbotron" style="margin-top:30px;text-align: center;height: 100vh;">
-		<div class="container" style="margin-top: 70px;">
-			<h1 style="font-size: 80px;">Tarandeep Singh</h1>
-			<p class="lead">Hello, World!. I'm a C.S. Engineer with passion towards Machine Learning and Full Stack Development.</p>
-			<hr class="my-4" style="margin-bottom: 50px;">
-			<a href=""><button type="button" class="btn btn-outline-light">Skills</button></a>
+	<div class="jumbotron">
+		<div class="container">
+			<h1>Tarandeep Singh</h1>
+			<p class="lead">Hello, World! I'm a C.S. Engineer with passion towards Machine Learning and Full Stack Development.</p>
+			<hr class="my-4">
+			<a href="#skills"><button type="button" class="btn btn-outline-light">Skills</button></a>
 			<a href="#projects"><button type="button" class="btn btn-outline-light">Projects</button></a>
-			<button type="button" class="btn btn-outline-light">Experience</button>
-			<button type="button" class="btn btn-outline-light">Hobbies</button>
+			
 
-			<p style="margin-top: 10px;">Let's connect</p>
+			<p>Let's connect</p>
 			<a class="btn btn-primary rounded" href="https://github.com/Tarandeep97" role="button"><i class="fab fa-github fa-2x"></i></a>
 			<a class="btn btn-primary rounded" href="https://www.kaggle.com/tarandeep97" role="button"><i class="fab fa-kaggle fa-2x"></i></a>
 			<a class="btn btn-primary rounded" href="https://www.linkedin.com/in/tarandeep97/" role="button"><i class="fab fa-linkedin-in fa-2x"></i></a>
+			<a class="btn btn-primary rounded" href="https://www.hackerrank.com/tarandeeps1197" role="button"><i class="fab fa-hackerrank fa-2x"></i></a>
 			<a class="btn btn-primary rounded" href="mailto:tarandeeps1197@gmail.com" role="button"><i class="far fa-envelope fa-2x"></i></i></a>
-			
-			
 		</div>
 	</div>
 
-
-	<div class="container" style="margin-top:30px">
+	<div class="container">
+		<a name="skills"></a>
+	</div>
+	
+	<div class="container">
 		<a name="projects"></a>
 		<div class="row">
 			<div class="col-sm-6">
-				<div class="card text-white bg-success mb-6" style="margin-bottom: 10px;">
-					<div class="card-header">Smart Radiologist <span class="badge rounded-pill bg-light" style="float: right;margin-top: 2px;">Computer vision</span></div>
+				<div class="card text-white bg-success mb-6">
+					<div class="card-header">Smart Radiologist <span class="badge rounded-pill bg-light">Computer vision</span></div>
 					<div class="card-body">
 						<h4 class="card-title">AI based solution for automated radiology</h4>
-						<p class="card-text">The quick brown fox jumps over the lazy dog</p>
-						<a class="btn btn-light rounded-circle" href="#" role="button"><i class="fab fa-github"></i></a>
-						<a class="btn btn-light rounded-circle" href="#" role="button"><i class="fas fa-link"></i></i></a>
+						<p class="card-text">HTML, CSS, Javascript, Python & Tensorflowjs</p>
+						<a class="btn btn-light rounded-circle" href="https://github.com/Tarandeep97/Smart-radiologist" role="button"><i class="fab fa-github"></i></a>
 					</div>
 				</div>
 			</div>
 			<div class="col-sm-6">
-				<div class="card text-white bg-success mb-6" style="margin-bottom: 10px;">
-					<div class="card-header">ACM Student Chapter Website<span class="badge rounded-pill bg-light" style="float: right;margin-top: 2px;">Full Stack Dev</span></div>
+				<div class="card text-white bg-info mb-6">
+					<div class="card-header">ACM Student Chapter Website<span class="badge rounded-pill bg-light">Full Stack Dev</span></div>
 					<div class="card-body">
 						<h4 class="card-title">ACM Student Chapter Website</h4>
-						<p class="card-text">The quick brown fox jumps over the lazy dog</p>
-						<a class="btn btn-light rounded-circle" href="#" role="button"><i class="fab fa-github"></i></a>
+						<p class="card-text">HTML, CSS, Javascript, Python & Django</p>
+						<!--<a class="btn btn-light rounded-circle" href="#" role="button"><i class="fab fa-github"></i></a>-->
 						<a class="btn btn-light rounded-circle" href="https://bbsbec.acm.org/" role="button"><i class="fas fa-link"></i></i></a>
 					</div>
 				</div>
 			</div>
 			<div class="col-sm-6">
-				<div class="card text-white bg-success mb-6" style="margin-bottom: 10px;">
-					<div class="card-header">Pustak Bhandar<span class="badge rounded-pill bg-light" style="float: right;margin-top: 2px;">Full stack Dev</span></div>
+				<div class="card text-white bg-info mb-6">
+					<div class="card-header">Pustak Bhandar<span class="badge rounded-pill bg-light">Full stack Dev</span></div>
 					<div class="card-body">
 						<h4 class="card-title">Online Book Store</h4>
-						<p class="card-text">The quick brown fox jumps over the lazy dog</p>
-						<a class="btn btn-light rounded-circle" href="#" role="button"><i class="fab fa-github"></i></a>
+						<p class="card-text">HTML, CSS, Javascript, C# & ASP.NET Core</p>
+						<!--<a class="btn btn-light rounded-circle" href="#" role="button"><i class="fab fa-github"></i></a>-->
 						<a class="btn btn-light rounded-circle" href="#" role="button"><i class="fas fa-link"></i></i></a>
 					</div>
 				</div>
 			</div>
 			<div class="col-sm-6">
-				<div class="card text-white bg-success mb-6" style="margin-bottom: 10px;">
-					<div class="card-header">San Francisco Salary Insights<span class="badge rounded-pill bg-light" style="float: right;margin-top: 2px;">Data Science</span></div>
+				<div class="card text-white bg-primary mb-6">
+					<div class="card-header">San Francisco Salary Insights<span class="badge rounded-pill bg-light">Data Science</span></div>
 					<div class="card-body">
 						<h4 class="card-title">Exploration of San Francisco Salaries Dataset</h4>
-						<p class="card-text">The quick brown fox jumps over the lazy dog</p>
-						<a class="btn btn-light rounded-circle" href="#" role="button"><i class="fab fa-github"></i></a>
+						<p class="card-text">Python, Pandas, Numpy & Matplotlib</p>
+						<!--<a class="btn btn-light rounded-circle" href="#" role="button"><i class="fab fa-github"></i></a>-->
 						<a class="btn btn-light rounded-circle" href="https://www.kaggle.com/tarandeep97/exploration-of-sf-salaries" role="button"><i class="fas fa-link"></i></i></a>
 					</div>
 				</div>
 			</div>
+			<div class="col-sm-6">
+				<div class="card text-white bg-primary mb-6">
+					<div class="card-header">Comparative Study of Regression Models<span class="badge rounded-pill bg-light">NLP</span></div>
+					<div class="card-body">
+						<h4 class="card-title">Performance comparison of regression models</h4>
+						<p class="card-text">Python, Pandas, Numpy, Matplotlib & Scikit Learn</p>
+						<!--<a class="btn btn-light rounded-circle" href="#" role="button"><i class="fab fa-github"></i></a>-->
+						<a class="btn btn-light rounded-circle" href="https://www.kaggle.com/tarandeep97/performance-comparison-of-regression-models" role="button"><i class="fas fa-link"></i></i></a>
+					</div>
+				</div>
 			</div>
 		</div>
 	</div>
+	
 
 
-	<div class="container">
-		<div class="row">
-			<div class="col-sm-3" style="border">
-			</div>
-		</div>
-	</div>
-	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
-</body>
-</html>
+		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+		
+	</body>
+	</html>
