--- a/index.html
+++ b/index.html
@@ -20,10 +20,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.12.0/devicon.min.css">
 	<script src="https://kit.fontawesome.com/1f14724eeb.js" crossorigin="anonymous"></script>
 	<script type="text/javascript" href="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.3.2/chart.min.js"></script>
 	
-	<title>Tarandeep Singh - Portfolio</title>
+	<title>Tarandeep Singh</title>
 </head>
 <body>
 
@@ -45,12 +46,54 @@
 		</div>
 	</div>
 
-	<div class="container">
+	<hr>
+
+	<div id="#skills" class="container skill">
 		<a name="skills"></a>
+		<h1>Skills</h1>
+		<div class="row">
+			<div class="co-sm border">
+				<h4>Languages</h4>
+				<br>
+				<i class="fab fa-python fa-4x"></i>
+				<i class="fab fa-js fa-4x"></i>
+				<i class="devicon-csharp-plain icons"></i>
+				<i class="devicon-cplusplus-plain icons"></i>
+			</div>
+			<div class="col-sm border">
+				<h4>Tools</h4>
+				<br>
+				<i class="devicon-jupyter-plain-wordmark icons"></i>
+				<i class="devicon-visualstudio-plain icons"></i>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-sm border">
+				<h4>Frameworks</h4>
+				<br>
+				Front-end
+				<br>
+				<i class="devicon-bootstrap-plain icons"></i>
+				<br>
+				Back-end
+				<br>
+				<i class="devicon-dot-net-plain-wordmark icons"></i>
+				<i class="devicon-django-plain icons"></i>
+				<i class="devicon-dotnetcore-plain icons"></i>
+			</div>
+			<div class="col-sm border">
+				<h4>Miscellaneous</h4>
+				<br>
+				<i class="devicon-git-plain icons"></i>
+			</div>
+		</div>
 	</div>
+
+	<hr>
 	
-	<div class="container">
+	<div class="container project">
 		<a name="projects"></a>
+		<h1>Projects</h1>
 		<div class="row">
 			<div class="col-sm-6">
 				<div class="card text-white bg-success mb-6">
@@ -108,12 +151,18 @@
 			</div>
 		</div>
 	</div>
+
+	<hr>
+
+	<div class="footer">
+		<p>Made with <i class="fas fa-heart"></i></p>
+	</div>
 	
 
 
-		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
-		
-	</body>
-	</html>
+	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
+
+</body>
+</html>
