--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 	<hr>
 
 	<div class="footer">
-		<p>Made with <i class="fas fa-heart"></i></p>
+		<p>Made with <i class="fas fa-heart"></i> by Tarandeep Singh</p>
 	</div>
 	
 
